--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-flash": "^0.0.2",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
+    "iamport": "^0.3.4",
     "jsdom": "^20.0.1",
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
