--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2",
+    "redis": "^4.4.0",
     "request-ip": "^3.3.0",
     "sharp": "^0.31.1",
     "tslib": "^2.4.0"
